--- a/StoreFrontChildTheme/style.css
+++ b/StoreFrontChildTheme/style.css
@@ -14,6 +14,7 @@
 
 /*Change 2: Styling content blocks in all pages*/
 .content-view{
+	background-color:#282828;
 	margin-top:20px;
 	-webkit-box-shadow: 0px 0px 24px -1px rgba(0,0,0,0.75);
 	-moz-box-shadow: 0px 0px 24px -1px rgba(0,0,0,0.75);
@@ -23,4 +24,11 @@
 /*Change 3: Removing focus outline from all elements*/
 *:focus{
 	outline:0!important;
+}
+
+/*Change 4: Changing style of all input fields and textareas*/
+input,textarea{
+	color:white!important;
+	background-color:rgb(25, 25, 25)!important;
+	border-color:#81d742!important;
 }
