--- a/StoreFrontChildTheme/style.css
+++ b/StoreFrontChildTheme/style.css
@@ -26,9 +26,27 @@
 	outline:0!important;
 }
 
-/*Change 4: Changing style of all input fields and textareas*/
-input,textarea{
+/*Change 4: Changing style of all labels, options, input fields and textareas*/
+select,option,input,textarea{
 	color:white!important;
 	background-color:rgb(25, 25, 25)!important;
 	border-color:#81d742!important;
+}
+label{
+		border-color:#81d742!important;
+}
+
+/*Change 5: Changing style of tables and lists*/
+table,.order_details{
+	background-color:#282828!important;
+	-webkit-box-shadow: 0px 0px 24px -1px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 24px -1px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 24px -1px rgba(0,0,0,0.75);
+}
+
+th,td,fieldset{
+	background-color:#282828!important;
+}
+th{
+	background-color:rgb(25, 25, 25)!important;
 }
