--- a/StoreFrontChildTheme/style.css
+++ b/StoreFrontChildTheme/style.css
@@ -66,3 +66,10 @@ box-shadow: 0px 0px 19px 0px rgba(124,184,13,1);
 -moz-box-shadow: 0px 0px 19px 0px rgba(124,184,13,1);
 box-shadow: 0px 0px 19px 0px rgba(124,184,13,1);
 }
+
+/*Change 7: Styling RequestShortCode*/
+.CustomRequestBanner{
+background: rgb(129,215,66)!important;
+background: linear-gradient(180deg, rgba(129,215,66,1) 12%, rgba(231,236,28,1) 100%)!important;
+}
+
