--- a/StoreFrontChildTheme/style.css
+++ b/StoreFrontChildTheme/style.css
@@ -85,3 +85,8 @@ background: linear-gradient(180deg, rgba(129,215,66,1) 12%, rgba(231,236,28,1) 1
 -moz-box-shadow: 0px 0px 34px 0px rgba(0,0,0,0.75);
 box-shadow: 0px 0px 34px 0px rgba(0,0,0,0.75);
 }
+/*Change 10: Styling Car Empty Blocks*/
+.cart-empty{
+	background-color:#81d742;
+	color:#282828;
+}
